<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="aztek.android.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/name"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:layout_width="100dp" />

            <EditText
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/nameBox"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/surname"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/surnameBox"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.EditText"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/gradesamount"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:id="@+id/gradesamount"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/gradesamountBox"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.01">

            <TextView
                android:text="@string/avrg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/avrgLabel"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/avrgScore"
                android:layout_weight="1"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:text="@string/gradesButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/gradesButton"
            android:elevation="0dp" />

        <Button
            android:text="@string/superButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/superButton"
            android:visibility="gone" />

        <Button
            android:text="@string/badButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/badButton"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>
